# lab1_dynamicArray

./: .gitignore  CMakeLists.txt  Makefile  README.md
inc/: collection.h  doubleTypeinfo.h  input.h  main.h  menu.h  sort.h  stringTypeinfo.h  typeinfo.h  ui.h  util.h
src/: CMakeLists.txt  collection.c  doubleTypeinfo.c  input.c  main.c  menu.c  sort.c  stringTypeinfo.c  ui.c  util.c
tests/: CMakeLists.txt  testArray.cpp  testDouble.cpp  testString.cpp
